--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -15,8 +15,8 @@
   <nav>
     <ul>
     <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Home</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/knitting-basics">Knitting Basics</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/project-ideas">Project Ideas</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/what-is-knitting">What is Knitting?</a></li>  
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Knitting Basics</a></li>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Project Ideas</a></li>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">What is Knitting?</a></li>
     </ul>
   </nav>
