--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -2,4 +2,21 @@
 <head>
   <meta charset="utf-8">
 
-  
+  <title>Introduction to Knitting</title>
+  <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
+  <meta name="author" content="Sara Dingmann">
+  <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
+
+
+</head>
+
+<body>
+
+  <nav>
+    <ul>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Home</a></li>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Knitting Basics</a></li>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Project Ideas</a></li>
+    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">What is Knitting?</a></li>
+    </ul>
+  </nav>
