--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -12,6 +12,8 @@
 
 <body>
 
+  <h1>Introduction to Knitting!!</h1>
+
   <nav>
     <ul>
     <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Home</a></li>
