--- a/index.html
+++ b/index.html
@@ -22,3 +22,5 @@
     <li><a href="what-is-knitting.html">What is Knitting?</a></li>
     </ul>
   </nav>
+
+  <img src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
