--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -33,10 +33,10 @@
 
   <p> Here is a pragraph that will continue on with the hsitory of knitting. I hope to find some interesting facts and figure out why knitting is cooler than crocheting. Speaking for crocheting. </p>
 
-  <storng>How is it differnet from crocheting?</strong>
+  <strong>How is it differnet from crocheting? </strong>
 
   <p> Here is where I will be able to explain conceptually how crocheting is different from knitting. Crocheting does not seem to be as fun as knitting, there is typically more counting involoved, but atleast it goes by faster. One of the main differences between knitting and crocheting is the tool used to do the craft, with knitting you use two meedles, but with crocheting you use one hook.
 
   <img src="crochetinghooks.jpg" alt="Three crocheting hooks lay one in front of the other, each a different color, but all about the same size. You only see the top half of the hooks, not the whole tool." />
 
-  <p> Here is some more information about how crocheting is different from knitting. In knitting you use the two tools to pull the loops through eachother, but in crocheting you are forming a chain of loops with the yarn. </p>    
+  <p> Here is some more information about how crocheting is different from knitting. In knitting you use the two tools to pull the loops through eachother, but in crocheting you are forming a chain of loops with the yarn. </p>
