--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -7,6 +7,11 @@
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Mukta:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+
+
 
 </head>
 
@@ -22,3 +27,53 @@
     <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">What is Knitting?</a></li>
     </ul>
   </nav>
+
+  <section>
+    <h1> Knitting Basics </h1>
+    <p> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First we’ll go over what materials you need and then teach you how to get started.</p>
+  </section>
+
+  <section>
+    <h2> Materials </h2>
+    <div>
+      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <strong> Knitting needles </strong>
+      <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles. </p>
+    </div>
+    <div>
+      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <strong>Yarn needle</strong>
+      <p>Yarn needles are large, dull needles that are used to stitch together your yarn creations and bind them off. They can also be used to decorate your knitted projects, however that is not something I will go over on this site. </p>
+    </div>
+    <div>
+      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <strong>Stich Markers</strong>
+      <p>Stich markers are used to mark your stiches. This is useful when you need to do a certain stich each time you reach a particular spot in the work, like we will do in the slippers project. </p>
+    </div>
+  </section>
+
+  <section>
+    <h2>Knitting Techniques</h2>
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <strong> Casting On </strong>
+    <p>Casting on is how you begin you knitted project. There are a few cast-on methods, but for beginners I suggest using     . For that you will start with. Use the images above as a guide.</p>
+
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <strong> Knit Stitch </strong>
+    <p>Insert your right needle from front to back into the first stitch of your cast on row. Wrap the yarn counter-clockwise around to the front of the right hand needle. This will create a loop on the right needle. Now, slide the right needle down and through the original stitch. Your right hand needle should now be in front of the left hand needle. Then, slip the new stitch up and onto the right needle. Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch. Use the images above to help guide you.</p>
+
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <strong> Purl Stitch</strong>
+    <p>With the yarn in the front of your work, insert the right needle from back to the front of the first stitch, or you can think of it as straight into it. Your right knitting needle will be resting over your left needle. Starting with your yarn in the front, wrap your yarn around the right side of your right needle counter-clockwise direction, finishing with your yarn in the front of your needles again. Slide the right needle down and bring the point from front to back of the stitch, bringing the yarn with it. Slip the old stitch off the left needle. Now the new stitch is on your right needle.  Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch.</p>
+
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <strong>Casting Off</strong>
+    <p>Knit two stitches in the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. Know knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
