--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <section>
-    <a href="project-ideas.html">Knitting Patterns</a>
+    <h2><a href="project-ideas.html">Knitting Patterns</a></h2>
 
     <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 
