links fixed and font size

--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -18,13 +18,12 @@
 <body>
 
   <h1>Introduction to Knitting</h1>
-
   <nav>
     <ul>
     <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Home</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Knitting Basics</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Project Ideas</a></li>
-    <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">What is Knitting?</a></li>
+    <li><a href="knitting-basics.html">Knitting Basics</a></li>
+    <li><a href="project-ideas.html">Project Ideas</a></li>
+    <li><a href="what-is-knitting.html">What is Knitting?</a></li>
     </ul>
   </nav>
 
