--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <img src="websitecoverphoto.jpg" alt="Eight stacked balls of yarn of multiple colors with a pair of knitting needles stuck in the center yarn ball." />
 
 
-  <section>
+  <section id="popup">
     <h2><a href="project-ideas.html">Knitting Patterns</a></h2>
 
     <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
