--- a/project-ideas.html
+++ b/project-ideas.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
 
   <title>Introduction to Knitting</title>
   <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
