--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="popup">
     <h2><a href="project-ideas.html">Knitting Patterns</a></h2>
 
-    <img id="pop-img" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 
     <p> We have four knitting patterns that a great for beginingers and fun for experienced knitters. Click the header above them out and take our quiz. </p>
 
