--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -26,24 +26,24 @@
     </ul>
   </nav>
 
-  <section>
-    <h1> Knitting Basics </h1>
+  <section >
+    <h2> Knitting Basics </h2>
     <p> There are a few aspects of knitting you will need to get acquainted with before you can pick up the needles and start knitting. First we’ll go over what materials you need and then teach you how to get started.</p>
   </section>
 
   <section>
     <h2> Materials </h2>
-    <div>
+    <div class="popup">
       <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong> Knitting needles </strong>
       <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles. </p>
     </div>
-    <div>
+    <div class="popup">
       <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong>Yarn needle</strong>
       <p>Yarn needles are large, dull needles that are used to stitch together your yarn creations and bind them off. They can also be used to decorate your knitted projects, however that is not something I will go over on this site. </p>
     </div>
-    <div>
+    <div class="popup">
       <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong>Stich Markers</strong>
       <p>Stich markers are used to mark your stiches. This is useful when you need to do a certain stich each time you reach a particular spot in the work, like we will do in the slippers project. </p>
