--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -52,26 +52,26 @@
 
   <section>
     <h2>Knitting Techniques</h2>
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Casting On </strong>
     <p>Casting on is how you begin you knitted project. There are a few cast-on methods, but for beginners I suggest using     . For that you will start with. Use the images above as a guide.</p>
 
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Knit Stitch </strong>
     <p>Insert your right needle from front to back into the first stitch of your cast on row. Wrap the yarn counter-clockwise around to the front of the right hand needle. This will create a loop on the right needle. Now, slide the right needle down and through the original stitch. Your right hand needle should now be in front of the left hand needle. Then, slip the new stitch up and onto the right needle. Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch. Use the images above to help guide you.</p>
 
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Purl Stitch</strong>
     <p>With the yarn in the front of your work, insert the right needle from back to the front of the first stitch, or you can think of it as straight into it. Your right knitting needle will be resting over your left needle. Starting with your yarn in the front, wrap your yarn around the right side of your right needle counter-clockwise direction, finishing with your yarn in the front of your needles again. Slide the right needle down and bring the point from front to back of the stitch, bringing the yarn with it. Slip the old stitch off the left needle. Now the new stitch is on your right needle.  Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch.</p>
 
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img id="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong>Casting Off</strong>
     <p>Knit two stitches in the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. Know knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
