--- a/project-ideas.html
+++ b/project-ideas.html
@@ -63,37 +63,37 @@
   </section>
 
   <h2>Quiz: What project should you do?</h2>
-  <ul>
-    <li>Question 1</li>
-      <ul>
+  <ul class="quiz">
+    <li class="question">Question 1</li>
+      <ul class="answers">
         <li>Answer 1</li>
         <li>Answer 2</li>
         <li>Answer 3</li>
         <li>Answer 4</li>
       </ul>
-    <li>Question 2</li>
-        <ul>
+    <li class="question">Question 2</li>
+        <ul class="answers">
           <li>Answer 1</li>
           <li>Answer 2</li>
           <li>Answer 3</li>
           <li>Answer 4</li>
         </ul>
-    <li>Question 3</li>
-          <ul>
+    <li class="question">Question 3</li>
+          <ul class="answers">
             <li>Answer 1</li>
             <li>Answer 2</li>
             <li>Answer 3</li>
             <li>Answer 4</li>
           </ul>
-    <li>Question 4</li>
-          <ul>
+    <li class="question">Question 4</li>
+          <ul class="answers">
             <li>Answer 1</li>
             <li>Answer 2</li>
             <li>Answer 3</li>
             <li>Answer 4</li>
           </ul>
-    <li>Question 5</li>
-          <ul>
+    <li class="question">Question 5</li>
+          <ul class="answers">
               <li>Answer 1</li>
               <li>Answer 2</li>
               <li>Answer 3</li>
