test on nav formatting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h1>Introduction to Knitting</h1>
   <nav>
-    <ul>
+    <ul class="navigation">
     <li><a href="https://j4502-ss21.github.io/sara-dingmann-final/">Home</a></li>
     <li><a href="knitting-basics.html">Knitting Basics</a></li>
     <li><a href="project-ideas.html">Project Ideas</a></li>
