--- a/project-ideas.html
+++ b/project-ideas.html
@@ -66,37 +66,37 @@
   <ul class="quiz">
     <li class="question">Question 1</li>
       <ul class="answers">
-        <li>Answer 1</li>
-        <li>Answer 2</li>
-        <li>Answer 3</li>
-        <li>Answer 4</li>
+        <li class="select">Answer 1</li>
+        <li class="select">Answer 2</li>
+        <li  class="select">Answer 3</li>
+        <li class="select">Answer 4</li>
       </ul>
     <li class="question">Question 2</li>
         <ul class="answers">
-          <li>Answer 1</li>
-          <li>Answer 2</li>
-          <li>Answer 3</li>
-          <li>Answer 4</li>
+          <li class="select">Answer 1</li>
+          <li class="select">Answer 2</li>
+          <li class="select">Answer 3</li>
+          <li class="select">Answer 4</li>
         </ul>
     <li class="question">Question 3</li>
           <ul class="answers">
-            <li>Answer 1</li>
-            <li>Answer 2</li>
-            <li>Answer 3</li>
-            <li>Answer 4</li>
+            <li class="select">Answer 1</li>
+            <li class="select">Answer 2</li>
+            <li class="select">Answer 3</li>
+            <li class="select">Answer 4</li>
           </ul>
     <li class="question">Question 4</li>
           <ul class="answers">
-            <li>Answer 1</li>
-            <li>Answer 2</li>
-            <li>Answer 3</li>
-            <li>Answer 4</li>
+            <li class="select">Answer 1</li>
+            <li class="select">Answer 2</li>
+            <li class="select">Answer 3</li>
+            <li class="select">Answer 4</li>
           </ul>
     <li class="question">Question 5</li>
           <ul class="answers">
-              <li>Answer 1</li>
-              <li>Answer 2</li>
-              <li>Answer 3</li>
-              <li>Answer 4</li>
+              <li class="select">Answer 1</li>
+              <li class="select">Answer 2</li>
+              <li class="select">Answer 3</li>
+              <li class="select">Answer 4</li>
           </ul>
   </ul>
