--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -45,8 +45,8 @@
     </div>
     <div class="popup">
       <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-      <strong>Stich Markers</strong>
-      <p>Stich markers are used to mark your stiches. This is useful when you need to do a certain stich each time you reach a particular spot in the work, like we will do in the slippers project. </p>
+      <strong>Circular Needles</strong>
+      <p>Circular needles are used to knit in the round, like we will use for knitting the cowl. Again, I would recommend getting a size 8 needle.  </p>
     </div>
   </section>
 
@@ -56,22 +56,32 @@
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Casting On </strong>
-    <p>Casting on is how you begin you knitted project. There are a few cast-on methods, but for beginners I suggest using     . For that you will start with. Use the images above as a guide.</p>
+    <p>First, tie a slip knot on one of the needles. The yarn leading to the ball of yarn is you leading strand, and the other end is your tail. Hold the needle in your right hand and drop the leading strand of yarn over your left thumb and forefinger, the yarn leading to the needle over your forefinger. </p>
+    <p>Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around you forefinger towards your palm, making a triangle with the yarn.</p>
+    <p> Then tuck the needle under the yarn pinned by your pinky and forefinger. Drop the yarn from your fingers and pull the yarn tight, you should have made a loop around your needle. </p>
+    <p>Repeat this until you have the desired number of stiches, not counting the slip knot ties at the beginning.  </p>
 
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Knit Stitch </strong>
-    <p>Insert your right needle from front to back into the first stitch of your cast on row. Wrap the yarn counter-clockwise around to the front of the right hand needle. This will create a loop on the right needle. Now, slide the right needle down and through the original stitch. Your right hand needle should now be in front of the left hand needle. Then, slip the new stitch up and onto the right needle. Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch. Use the images above to help guide you.</p>
+    <p>Hold the needle with the stiches in your left hand and hold your free needle in your right hand. Stick your right needle into the first stitch of your cast on row, inserting the needle from the bottom of the stich and up. Wrap the yarn counterclockwise around to the front of the free needle, not fully making a loop. </p>
+    <p>Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end-up in front of needle holding all the stiches in your left hand.</p>
+    <p> Next, pull the stich slipped through the new stich off the needle using your right-hand needle. Pull the leading yarn to tighten. </p>
+    <p>Then continue this pattern across all of your stiches on the left-hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. Use the images above to help guide you.</p>
 
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Purl Stitch</strong>
-    <p>With the yarn in the front of your work, insert the right needle from back to the front of the first stitch, or you can think of it as straight into it. Your right knitting needle will be resting over your left needle. Starting with your yarn in the front, wrap your yarn around the right side of your right needle counter-clockwise direction, finishing with your yarn in the front of your needles again. Slide the right needle down and bring the point from front to back of the stitch, bringing the yarn with it. Slip the old stitch off the left needle. Now the new stitch is on your right needle.  Then continue this pattern across all of your stiches on the left hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. This creates the garter stitch.</p>
+    <p>Start as you would for the knit stich, but instead of having the leading strand yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
+    <p>Wrap the yarn around the needle counterclockwise starting from the top, this should again make half a loop around your right-hand needle. </p>
+    <p>Then bring the tip of the needle back through the original stich, keeping the new stich wrapped around the needle, this will pull it through the loop.</p>
+    <p> Next, pull the old stitch of the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
 
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong>Casting Off</strong>
-    <p>Knit two stitches in the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. Know knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
+    <p>Knit two stitches using the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. </p>
+    <p>Now, knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
