--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -31,16 +31,16 @@
 
   <strong>History of Knitting</strong>
 
-  <p> Here is where I am going to put my write-up about the information regarding the history of knitting. I know I should have more information written here, but for now I am going to go with this so I can see what this will look like once I am able to add some formatting. </p>
+  <p> Knitting is the process of knotting one strand of yarn together to form a fabric. This was easier to do than other forms of creating fabric, such as weaving, because it required fewer and smaller tools. Knitting has been around for centuries, back as far as the 11th century. Many historians believe that knitting originated in the middle east. Knitting came to American with European colonization.  </p>
 
   <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 
-  <p> Here is a pragraph that will continue on with the hsitory of knitting. I hope to find some interesting facts and figure out why knitting is cooler than crocheting. Speaking for crocheting. </p>
+  <p> Knitting became mechanized in the 1500s in France during the Industrial Revolution. However, it wasn’t until the 1800s that knitting moved to factories after the invention of a steam powered knitting machine. This is when knitting became more of a hobby than a necessity. </p>
 
   <strong>How is it differnet from crocheting? </strong>
 
-  <p> Here is where I will be able to explain conceptually how crocheting is different from knitting. Crocheting does not seem to be as fun as knitting, there is typically more counting involoved, but atleast it goes by faster. One of the main differences between knitting and crocheting is the tool used to do the craft, with knitting you use two meedles, but with crocheting you use one hook.
+  <p> So, what is the difference between knitting and crocheting? Both are ways of looping together yarn together to form a fabric. And they essentially are the same. Knitting creates more “v” like loops while crocheting creates loops that are more like knots. </p>
 
   <img src="crochetinghooks.jpg" alt="Three crocheting hooks lay one in front of the other, each a different color, but all about the same size. You only see the top half of the hooks, not the whole tool." />
 
-  <p> Here is some more information about how crocheting is different from knitting. In knitting you use the two tools to pull the loops through eachother, but in crocheting you are forming a chain of loops with the yarn. </p>
+  <p> As for which is better, that is up to personal preference. Crocheting is actually easier and faster then knitting. Since it only requires on tool it is a lot easier for people to pick up and cheaper to start. While knitting does take more time and costs more money because of the need for more tools, it can create more complicated designs.  </p>
