--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -34,17 +34,17 @@
   <section>
     <h2> Materials </h2>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="needles.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong> Knitting needles </strong>
       <p> Knitting needles come in many sizes and shapes. For beginners I suggest getting flat needles in size of 8, which works great for medium weight yarn. There are other needles such as double pointed needles and in-the-round needles, but for this site we will work with flat needles. </p>
     </div>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="yarnneedles.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong>Yarn needle</strong>
       <p>Yarn needles are large, dull needles that are used to stitch together your yarn creations and bind them off. They can also be used to decorate your knitted projects, however that is not something I will go over on this site. </p>
     </div>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="circular.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong>Circular Needles</strong>
       <p>Circular needles are used to knit in the round, like we will use for knitting the cowl. Again, I would recommend getting a size 8 needle.  </p>
     </div>
@@ -52,36 +52,36 @@
 
   <section>
     <h2>Knitting Techniques</h2>
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="caston1.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="caston2.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="caston3.1.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Casting On </strong>
     <p>First, tie a slip knot on one of the needles. The yarn leading to the ball of yarn is you leading strand, and the other end is your tail. Hold the needle in your right hand and drop the leading strand of yarn over your left thumb and forefinger, the yarn leading to the needle over your forefinger. </p>
     <p>Hold the yarn draped over your thumb and leading to the ball of yarn with pinky and ring finger. Pull the needle around you forefinger towards your palm, making a triangle with the yarn.</p>
     <p> Then tuck the needle under the yarn pinned by your pinky and forefinger. Drop the yarn from your fingers and pull the yarn tight, you should have made a loop around your needle. </p>
     <p>Repeat this until you have the desired number of stiches, not counting the slip knot ties at the beginning.  </p>
 
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="knit1.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="knit4.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="knit5.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Knit Stitch </strong>
     <p>Hold the needle with the stiches in your left hand and hold your free needle in your right hand. Stick your right needle into the first stitch of your cast on row, inserting the needle from the bottom of the stich and up. Wrap the yarn counterclockwise around to the front of the free needle, not fully making a loop. </p>
     <p>Then, slide the right needle down while holding the newly created stich on the needle. Turn the right needle sideways as you do and pull the new loop through the original stitch on the needle. Your right-hand needle will end-up in front of needle holding all the stiches in your left hand.</p>
     <p> Next, pull the stich slipped through the new stich off the needle using your right-hand needle. Pull the leading yarn to tighten. </p>
     <p>Then continue this pattern across all of your stiches on the left-hand needle, and when you get to the end, switch the needled and use the free needled now in your right hand to do this across the needle in your left hand. Use the images above to help guide you.</p>
 
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="purl1.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="purl2.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="purl3.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong> Purl Stitch</strong>
     <p>Start as you would for the knit stich, but instead of having the leading strand yarn hang behind the needle, pull it to the front. Insert your needle through the first stitch from top to bottom, keeping the right-hand needle in front of the left. </p>
     <p>Wrap the yarn around the needle counterclockwise starting from the top, this should again make half a loop around your right-hand needle. </p>
     <p>Then bring the tip of the needle back through the original stich, keeping the new stich wrapped around the needle, this will pull it through the loop.</p>
     <p> Next, pull the old stitch of the needle in your left hand using the right needle. Pull the leading strand to tighten and repeat. </p>
 
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-    <img class="how-to" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="castoff2.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="castoff3.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+    <img class="how-to" src="castoff4.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
     <strong>Casting Off</strong>
     <p>Knit two stitches using the knit stitch. After you have done that you will insert your left needled into the first stitch you made and pull it up and over the second stich you made and let it fall off your left needle. Your first stich will now be hanging around your second and you will only have one stich on your needle. </p>
     <p>Now, knit another stitch from the left-hand needle. You will repeat the process of pulling the other stitch over the most recent one you knitted and letting it fall off the left-hand needle so it hangs off of the stitch on the right-hand needle. This will create a chain of loops and bind-off your piece. </p>
