--- a/project-ideas.html
+++ b/project-ideas.html
@@ -28,9 +28,9 @@
   </nav>
 
 <div class="projectheader">
-  <img id="header" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-  <img id="header"  src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
-  <img id="header" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+  <img id="header" src="hat.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+  <img id="header"  src="cowl.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+  <img id="header" src="scarf.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
   <img id="header" src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
 </div>
 
@@ -41,14 +41,14 @@
 
   <section>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="scarf.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong> Scarf </strong>
       <p> A scarf may seem like one of the simplest projects to make, and in one sense it is. However, a scarf is difficult in that you have to be consistent with your stiches the whole time, no dropped or split stiches (these we will look like holes or change the width of your scarf).</p>
       <p>A scarf is simple in that you don’t really need a pattern for it, however it is nice to have some guidance on how wide to make it. For my scarfs I like to cast on 35 stiches using medium yarn and knitting with size 8 needles. Remember, the size of your needles will impact how large your stiches are, and change the width of the project. You can use smaller needles for a tighter stich, just make sure to knit a swatch to see how many stiches you will need to get your desired width. </p>
       <p>A basic scarf is easy in that you only need to use one stich the whole time: the knit stich. Knit the scarf to the desired length and then cast-off.</p>
     </div>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="hat.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong> Hat </strong>
       <p> I flat knit hat is almost as easy to make as a basic scarf. You will knit a rectangle, sew-up the side with the yarn needle, and then use the needle to gather the top.</p>
       <p>Again, use size 8 needles and medium weight yarn. Cast on 72 stiches and use the knit stitch. Work the piece until it is 12 inches long and cast-off keeping the tail very long.</p>
@@ -69,7 +69,7 @@
       <p>Now do all of this again to cover the other foot!</p>
     </div>
     <div class="popup">
-      <img src="knittingimage.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
+      <img src="cowl.jpg" alt="Grey ball of yarn with a pair of knitting needles stuck through the front of it." />
       <strong> Cowl </strong>
       <p> This last pattern will serve as a great introduction to working with circular needled.</p>
       <p>This will require a size 8 circular needle and medium weight yarn. To get the unique bumpy look we will be combining the knit and purl stitch like the ribbing for the slippers but offsetting them by one on alternating rows. This is called the seed stich.</p>
