--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Introduction to Knitting</title>
+  <title>Introduction to Knitting Home Page</title>
   <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
