--- a/what-is-knitting.html
+++ b/what-is-knitting.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Introduction to Knitting</title>
-  <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
+  <title>What is Knitting?</title>
+  <meta name="description" content="History of knitting and a comparison on crocheting">
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
 
