--- a/knitting-basics.html
+++ b/knitting-basics.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Introduction to Knitting</title>
-  <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
+  <title>Knitting Basics</title>
+  <meta name="description" content="Description of materials and techniques to get started knitting.">
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
 
