--- a/project-ideas.html
+++ b/project-ideas.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Introduction to Knitting</title>
-  <meta name="description" content="Knitting basics website for Sara Dingmann's final.">
+  <title>Project Ideas</title>
+  <meta name="description" content="Four project ideas and a quiz for what project to do.">
   <meta name="author" content="Sara Dingmann">
   <meta name="keywords" content="Sara Dingmann, J4502, J7502"/>
 
